Support deleting namespaced function
